fix alignment and div height

--- a/index.css
+++ b/index.css
@@ -304,7 +304,7 @@ footer i {
 .text-container {
   width: 70%;
   margin: auto;
-  margin-top: 100px;
+  /*margin-top: 50px;*/
 }
 
 .text-container h1 {
@@ -336,7 +336,7 @@ footer i {
 /*IN CLASS*/
 
 .container-topMargin {
-  margin-top: 150px;
+  margin-top: 100px;
 /*  padding-left: 150px;
   padding-right: 150px;*/
   background: rgb(170, 196, 223); /* For browsers that do not support gradients */
@@ -371,7 +371,7 @@ footer i {
 }
 
 .empty-section {
-  height: 300px;
+  height: 100px;
 }
 
 /*DONATE*/
@@ -379,7 +379,7 @@ footer i {
   margin: auto;
   margin-top: 50px;
   width: 100%;
-  height: 1800px;
+  height: 1350px;
   position: relative;
   border-radius: 5px;
   background: #f5f2ef; /* For browsers that do not support gradients */
@@ -390,7 +390,7 @@ footer i {
 }
 
 .donate-container h2{
-  padding-top: 80px;
+  padding-top: 40px;
   text-align: center; 
 }
 
@@ -419,6 +419,7 @@ footer i {
   justify-content: space-around;
   padding: 10px 10px;
   position: relative;
+  z-index: 10;
 }
 
 .donate-header {
